Committed draft as of 15 Nov 2010
Added University Council to legislative
Changed Budget Priorities Committee account to Student Organization Funding account
Changed Community Service Committee account to Community Service Funding account
Added Michigan Compiled Laws reference to DPS Oversight Committee elections

--- a/elections.tex
+++ b/elections.tex
@@ -398,7 +398,7 @@ Any seats that are vacant or held by appointment will be up for election as half
 
 \section{Department of Public Safety Oversight Committee Elections.}
 \subsection{}
-All-campus elections for the two representative seats on the Department of Public Safety Oversight Committee shall be held in concurrence with the November and March elections.
+Pursuant to 1990 PA 120, MCL 390.1511, all-campus elections for the two representative seats on the Department of Public Safety Oversight Committee shall be held in concurrence with the November and March elections.
 \subsection{}
 Each election shall seat a student on the DPS Oversight Committee for a period of 1 year, with the runner-up acting as the backup Representative should the elected Representative resign.
 \subsection{}
