--- a/finance.tex
+++ b/finance.tex
@@ -25,12 +25,12 @@ The MSA Payroll Account shall be used to pay MSA's full-time and part-time staff
 
 \subsubsection{Committee and Commission Accounts.}
 Each MSA committee, commission, and select committee shall have its own account.  Unless otherwise instructed herein, the Treasurer shall determine the amount to be budgeted to each of these accounts in the annual budget.
-\subsubsubsection{Budget Priorities Committee.}
-The amount budgeted to the Budget Priorities Committee Account from the General Account by the semesterly budget shall be at least 30\% of projected incoming revenue from student fees or \$75,000, whichever is greater.
-\subsubsubsection{Community Service Commission.}
-The amounted budgeted to the Community Service Commission Account from the General Account by the semesterly budget shall be at least 12\% of projected incoming revenue from student fees or \$30,000, whichever is greater.
+\subsubsubsection{Student Organization Funding.}
+The amount budgeted to the Student Organization Funding Account from the General Account by the semesterly budget shall be at least 30\% of projected incoming revenue from student fees or \$75,000, whichever is greater.
+\subsubsubsection{Community Service Funding.}
+The amounted budgeted to the Community Service Funding Account from the General Account by the semesterly budget shall be at least 12\% of projected incoming revenue from student fees or \$30,000, whichever is greater.
 \subsubsubsection{}
-Funds from Budget Priorities Committees and Community Service Commission are the only funds that may be transferred to registered student organization SOAS accounts.
+Funds from Student Organization Funding Account and Community Service Funding Account are the only funds that may be transferred to registered student organization SOAS accounts.
 
 \subsubsection{Committee Discretionary.}
 The MSA Committee Discretionary shall be used by the Assembly for expenditures on specific projects and tasks of committee, commissions, and select committees. The amount budgeted to the Committee Discretionary account from the General Account by the annual budget shall consist of all funds not budgeted to any other MSA account. Committee Discretionary funds may only be disbursed to valid MSA committee, commission, or select committee SOAS accounts.
