--- a/legislative.tex
+++ b/legislative.tex
@@ -11,3 +11,8 @@ The President may call special meetings of the Assembly upon providing at least 
 
 \subsection{Quorum.}
 Pursuant to Article II, Section 4 of the Constitution, a simple majority of the members duly elected or appointed to serve in the Assembly shall constitute a quorum to do business.
+
+\section{University Council}
+
+\subsection{Meetings.}
+The Vice President may call meetings of the University Council upon providing at least 48 hours notice to the Council.
