Explicit subsection with President's ex-officio membership on the Assembly

--- a/executive.tex
+++ b/executive.tex
@@ -15,7 +15,10 @@ The President shall also appoint student representatives to university-wide comm
 The President may appoint Executive Commissions to study issues on campus, publish reports concerning issues under such purview, and recommend to the Executive Branch such measures as they shall deem appropriate.
 
 \subsubsection{Convening the Legislature.}
-The President may call into session the Assembly or the University Council at the President's discretion. The President shall serve as a non-voting ex-officio member of the Assembly.
+The President may call into session the Assembly or the University Council at the President's discretion.
+
+\subsubsection{Non-voting Member of the Assembly.}
+The President shall serve as a non-voting ex-officio member of the Assembly.
 
 \subsubsection{Recommend Measures to the Assembly.}
 The President and Vice President may, jointly or severally, recommend to the Assembly for its consideration such measures as they shall deem appropriate.
