Revised Student Organization Funding Commission mandate

--- a/executive.tex
+++ b/executive.tex
@@ -69,7 +69,7 @@ The following classification scheme for commissions is for organizational purpos
 \subsection{Logistical Commissions.}
 
 \subsubsection{}
-The Student Organization Funding Commission (``SOFC'') shall review applications for funding from student organizations, and shall submit student organization funding recommendations to the Assembly.
+The Student Organization Funding Commission (``SOFC'') shall review applications for funding from student organizations, and shall submit student organization funding recommendations from the Student Organization Funding Account and the Community Service Funding Account to the Assembly.
 
 \subsubsection{}
 The Campus Governance Commission (``CGC'') shall
