Changed student organization registration requirement from 5 currently-enrolled students to 10

--- a/organizations.tex
+++ b/organizations.tex
@@ -5,7 +5,7 @@ A student group seeking registration with MSA must comply with all of the MSA ru
 
 \subsection{Requirements for Registration.}
 \subsubsection{}
-A student organization must have at least five currently-enrolled University of Michigan students as members.
+A student organization must have at least 10 currently-enrolled University of Michigan students as members.
 \subsubsection{}
 More than half of the total membership of the group must be students currently enrolled at the University of Michigan.
 \subsubsection{}
@@ -130,7 +130,7 @@ For each funding cycle, the SOFC shall divide its membership into a Reviews Boar
 \subsubsection{}
 No voting member from either Board may vote on a request for funds from any student organization that they hold an appointed, compensated, or elected leadership position in.
 \subsubsection{}
-Violations of paragraph (3.a) shall be grounds for immediate removal from either Board.
+Violations of paragraph 3(a) shall be grounds for immediate removal from either Board.
 \subsubsection{}
 Violations by members of MSA shall constitute malfeasance in office and be grounds for impeachment or removal from all offices and positions held in MSA.
 \subsubsection{}
