Changed page headers

--- a/code.tex
+++ b/code.tex
@@ -20,7 +20,7 @@
 
 \rhead{\thepage}
 \chead{\qquad\qquad Article \Roman{article}}
-\lhead{MSA Compiled Code (draft)}
+\lhead{MSA Compiled Code}
 \rfoot{Last revised: \VCDateISO\ (Revision ID: {\tt \GITAbrHash})}
 \cfoot{}
 \lfoot{}
