--- a/executive.tex
+++ b/executive.tex
@@ -50,7 +50,7 @@ The Vice President may, jointly or severally with the President, recommend to th
 The Treasurer shall be the chief financial officer of MSA. The Treasurer and all other officers authorized by the Assembly to disburse funds must be bonded. The Treasurer shall disburse funds appropriated by the Assembly as provided for in this Constitution and in the Compiled Code, and shall create, publish, and maintain a manual to guide student organizations in pursuing budget allocations. The Treasurer shall, at the direction of the President, assist the legislature in drafting a proposed annual budget for the Central Student Government and present it to the Assembly for a vote. The Treasurer may serve as a non-voting \textit{ex-officio} member of any legislative body regarding student finance.
 
 \subsection{Student General Counsel.}
-The Student General Counsel shall be the chief representative of the Central Student Government in matters before student judiciaries. The Student General Counsel may retain up to three student representatives to serve as assistants in such matters. The Student General Counsel shall advise the Executive and the Legislature on the interpretation of the Constitution and the Compiled Code, and may serve as a non-voting \textit{ex-officio} member of any legislative body concerning rules and elections of student government.
+The Student General Counsel shall be the chief representative of the Central Student Government in matters before student judiciaries.  For the purpose of upholding the Constitution and Compiled Code, the Student General Counsel shall have standing for all cases submitted to the Central Student Judiciary.  The Student General Counsel may retain up to three student representatives to serve as assistants in such matters.  The Student General Counsel shall advise the Executive and the Legislature on the interpretation of the Constitution and the Compiled Code, and may serve as a non-voting \textit{ex-officio} member of any legislative body concerning rules and elections of student government.
 
 \subsection{Chief of Staff.}
 The Chief of Staff shall oversee attendance and procedural policies at meetings of the Executive Committee and executive commission meetings. The Chief of Staff shall solicit and receive reports of the various organs of government, maintain and publish executive records, and ensure collaboration among the various executive commissions. The Chief of Staff may serve as a non-voting \textit{ex-officio} member of any legislative body concerning rules and elections.
