--- a/executive.tex
+++ b/executive.tex
@@ -47,7 +47,7 @@ The Vice President may, jointly or severally with the President, recommend to th
 
 
 \subsection{Treasurer.}
-The Treasurer shall be the chief financial officer of MSA. The Treasurer and all other officers authorized by the Assembly to disburse funds must be bonded. The Treasurer shall disburse funds appropriated by the Assembly as provided for in this Constitution and in the Compiled Code, and shall create, publish, and maintain a manual to guide student organizations in pursuing budget allocations. The Treasurer shall, at the direction of the President, assist the legislature in drafting a proposed annual budget for the Central Student Government and present it to the Assembly for a vote. The Treasurer may serve as a non-voting \textit{ex-officio} member of any legislative body regarding student finance.
+The Treasurer shall be the chief financial officer of MSA. The Treasurer and all other officers authorized by the Assembly to disburse funds must be bonded. The Treasurer shall disburse funds appropriated by the Assembly as provided for in the Constitution and in the Compiled Code, and shall create, publish, and maintain a manual to guide student organizations in pursuing budget allocations. The Treasurer shall, at the direction of the President, assist the legislature in drafting a proposed annual budget for the Central Student Government and present it to the Assembly for a vote. The Treasurer may serve as a non-voting \textit{ex-officio} member of any legislative body regarding student finance.
 
 \subsection{Student General Counsel.}
 The Student General Counsel shall be the chief representative of the Central Student Government in matters before student judiciaries.  For the purpose of upholding the Constitution and Compiled Code, the Student General Counsel shall have standing for all cases submitted to the Central Student Judiciary.  The Student General Counsel may retain up to three student representatives to serve as assistants in such matters.  The Student General Counsel shall advise the Executive and the Legislature on the interpretation of the Constitution and the Compiled Code, and may serve as a non-voting \textit{ex-officio} member of any legislative body concerning rules and elections of student government.
@@ -142,7 +142,7 @@ The Disability Affairs Commission (``DAC2'') shall support and advocate for stud
 The North Campus Affairs Commission (``NCAC'') shall monitor and work toward the improvement of student life for all students who live and study on North Campus, and shall facilitate communication between relevant student organizations.
 
 \subsubsection{}
-The Greek Relations Committee ("GRC") is responsible for strengthening the relationship between MSA and the Greek community at Michigan. The committee's goal is to ensure that Greek Life is well integrated into the larger University community, to keep campus involved in Greek-sponsored events, and to act as a resource for the Greek community.
+The Greek Relations Commission ("GRC") is responsible for strengthening the relationship between MSA and the Greek community at Michigan. The committee's goal is to ensure that Greek Life is well integrated into the larger University community, to keep campus involved in Greek-sponsored events, and to act as a resource for the Greek community.
 
 \subsection{Issue Commissions}
 
